fix contrast

--- a/W12/css/small.css
+++ b/W12/css/small.css
@@ -650,5 +650,5 @@ footer a {
 
 .attributions a:link,
 .attributions a:visited {
-   color: #D58936;
+   color: #0c0c22;
 }
